--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  db:
+  db-sql:
     image: postgres:16
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
@@ -13,26 +13,55 @@ services:
       - backend
     restart: always
 
-  redis:
-    image: redis:6.2.14-alpine
+# adicionar MongoDB aqui
+    
+    ms-pedido:
+    build:
+      context: https://github.com/6SOATGP54/tech-challenge-ms-pedido.git
+      dockerfile: Dockerfile
     ports:
-      - "6379:6379"
-    networks:
-      - backend
-    restart: always
-
-  app:
-    build: .
-    ports:
-      - "8091:8091"
+      - "8092:8091" # Mapeia a porta 8091 do contêiner para 8092 no host
     depends_on:
-      - db
+      - db-sql
     environment:
       SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
     networks:
       - backend
+    container_name: ms_pedido
+
+  ms-pagamento:
+    build:
+      context: https://github.com/6SOATGP54/tech-challenge-ms-pagamento.git
+      dockerfile: Dockerfile
+    ports:
+      - "8093:8091" # Mapeia a porta 8091 do contêiner para 8093 no host
+    depends_on:
+      - db-sql
+    environment:
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+    networks:
+      - backend
+    container_name: ms_pagamento
+
+  ms-produto:
+    build:
+      context: https://github.com/6SOATGP54/tech-challenge-ms-produto.git
+      dockerfile: Dockerfile
+    ports:
+      - "8094:8091" # Mapeia a porta 8091 do contêiner para 8094 no host
+    depends_on:
+      - db-sql
+    environment:
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+    networks:
+      - backend
+    container_name: ms_produto
 
 networks:
   backend:
