added new Docker propeties

--- a/.develop.env
+++ b/.develop.env
@@ -1,6 +1,27 @@
+# SQL Database
 POSTGRES_DB=food
 POSTGRES_USER=crmm
 POSTGRES_PASSWORD=redmondpie@BR1
-SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/food
-SPRING_DATASOURCE_USERNAME=crmm
-SPRING_DATASOURCE_PASSWORD=redmondpie@BR1
+
+# NO-SQL Database
+MONGO_INITDB_ROOT_USERNAME=mcmm
+MONGO_INITDB_ROOT_PASSWORD=bluemonpie@AR2
+
+# Spring variables - ms-produto
+HOST_SQL=localhost
+DATABASE_SQL=food
+SQL_USER=crmm
+SQL_PASSWORD=redmondpie@BR1
+
+# Spring variables - ms-pagamento & ms-pedido
+## NO-SQL Database
+DATABASE_NOSQL=food
+HOST_NOSQL=localhost
+NOSQL_USER=mcmm
+NOSQL_PASSWORD=bluemonpie@AR2
+NOSQL_PORT=27017
+
+## RabbitQM
+RABBIT_HOST=localhost
+RABBIT_USER=bjmm
+RABBIT_PASSWORD: yellowemonpie@CH7
