--- a/.develop.env
+++ b/.develop.env
@@ -8,7 +8,7 @@ MONGO_INITDB_ROOT_USERNAME=mcmm
 MONGO_INITDB_ROOT_PASSWORD=bluemonpie@AR2
 
 # Spring variables - ms-produto
-HOST_SQL=localhost
+HOST_SQL=db-sql
 DATABASE_SQL=food
 SQL_USER=crmm
 SQL_PASSWORD=redmondpie@BR1
@@ -16,12 +16,12 @@ SQL_PASSWORD=redmondpie@BR1
 # Spring variables - ms-pagamento & ms-pedido
 ## NO-SQL Database
 DATABASE_NOSQL=food
-HOST_NOSQL=localhost
+HOST_NOSQL=db-nosql
 NOSQL_USER=mcmm
 NOSQL_PASSWORD=bluemonpie@AR2
 NOSQL_PORT=27017
 
 ## RabbitQM
-RABBIT_HOST=localhost
+RABBIT_HOST=rabbit-qm
 RABBIT_USER=bjmm
 RABBIT_PASSWORD: yellowemonpie@CH7
