--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.jackson.time-zone=America/Sao_Paulo
 spring.jackson.locale=pt-BR
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/food?createDatabaseIfNotExist=true
-spring.datasource.username=crmm
-spring.datasource.password=redmondpie@BR1
+spring.datasource.url=jdbc:postgresql://${HOST_SQL}:5432/${DATABASE_SQL}?createDatabaseIfNotExist=true
+spring.datasource.username=${SQL_USER}
+spring.datasource.password=${SQL_PASSWORD}
 
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 spring.jpa.show-sql=true
