--- a/.develop.env
+++ b/.develop.env
@@ -18,10 +18,11 @@ SQL_PASSWORD=redmondpie@BR1
 DATABASE_NOSQL=food
 HOST_NOSQL=db-nosql
 NOSQL_USER=mcmm
-NOSQL_PASSWORD=bluemonpie@AR2
+NOSQL_PASSWORD=bluemonpieAR2
 NOSQL_PORT=27017
 
 ## RabbitQM
-RABBIT_HOST=rabbit-qm
+RABBIT_HOST=rabbit-mq
+RABBIT_PORT=5672
 RABBIT_USER=bjmm
 RABBIT_PASSWORD: yellowemonpie@CH7
