--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>tech-challenge-ms-produto</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>6soatgp54</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -97,6 +99,7 @@
 			<artifactId>jacoco-maven-plugin</artifactId>
 			<version>0.8.12</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
