--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-test:
+  build:
     name: Build and Test Java
     runs-on: ubuntu-latest
 
@@ -28,36 +28,34 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    - name: Build with Maven
+    - name: Build and Run Tests
       run: mvn clean install
 
-    - name: Run Tests
-      run: mvn test
-
   sonar-analysis:
-      name: SonarCloud Analysis
-      runs-on: ubuntu-latest
+    name: SonarCloud Analysis
+    runs-on: ubuntu-latest
+    needs: build
 
-      steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: SonarCloud Scan
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
-        run: |
-          mvn sonar:sonar \
-            -Dsonar.projectKey=${{ vars.PROJECT_KEY }} \
-            -Dsonar.organization=${{ vars.ORGANIZATION }} \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-        
+    - name: SonarCloud Scan
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+      run: |
+        mvn sonar:sonar \
+          -Dsonar.projectKey=${{ vars.PROJECT_KEY }} \
+          -Dsonar.organization=${{ vars.ORGANIZATION }} \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
   docker-build-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
@@ -73,5 +71,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build Docker Image
-      run:  docker buildx build -t gf8imi1uubf/ms-produto:v1 . --push
+    - name: Build and Push Docker Image
+      run: |
+        docker buildx build \
+          -t gf8imi1uubf/ms-produto:v1 . --push
