--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Build and Test Java
+    name: Build Java
     runs-on: ubuntu-latest
 
     steps:
@@ -28,14 +28,14 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    - name: Build and Run Tests
+    - name: Build
       run: mvn clean install
-
-  sonar-analysis:
-    name: SonarCloud Analysis
+      
+   build-test:
+    name: Test Java
     runs-on: ubuntu-latest
     needs: build
-
+    
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
@@ -46,15 +46,50 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
 
-    - name: SonarCloud Scan
+    - name: Cache Maven Dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
+    - name: Build Test
+      run: mvn test
+
+  sonar-analysis:
+    name: Analyze with SonarQube
+    runs-on: ubuntu-latest
+    needs: build-test
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: 17
+        distribution: 'zulu'
+
+    - name: Cache SonarQube Packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+
+    - name: Run SonarQube Analysis
       env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
         mvn sonar:sonar \
-          -Dsonar.projectKey=${{ vars.PROJECT_KEY }} \
-          -Dsonar.organization=${{ vars.ORGANIZATION }} \
+          -Dsonar.projectKey=6SOATGP54_tech-challenge-ms-pedido \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
 
   docker-build-push:
     name: Build and Push Docker Image
