--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,8 @@ jobs:
   sonar-analysis:
     name: Build and Analyze
     runs-on: ubuntu-latest
-
+    needs: build
+    
     steps:
       - uses: actions/checkout@v4
         with:
