--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,7 @@ jobs:
   sonar-analysis:
     name: SonarQube
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v4
         with:
@@ -84,7 +85,7 @@ jobs:
       - name: SonarQube
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: e7d3e45350622f07b3d491c7ac624cad3c351951
+          SONAR_TOKEN:  ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify sonar:sonar -Dsonar.projectKey=ms-produto -DskipTests
 
   docker-build-push:
@@ -100,8 +101,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Build and Push Docker Image
         run: |
-          docker buildx build \
-            -t gf8imi1uubf/ms-produto:v1 . --push
+          docker buildx build -t gf8imi1uubf/ms-produto:v1 . --push
