Ajuste de variaveis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,7 @@ sonar.coverage.exclusions=src/main/**/model/*,src/main/**/*Application.java
 sonar.exclusions=src/main/**/model/*,src/main/**/*Application.java
 sonar.java.binaries=build/classes
 sonar.java.libraries=build/libs
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
 sonar.sourceEncoding=UTF-8
 sonar.log.level=INFO
