--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,8 @@ jobs:
   sonar-analysis:
     name: SonarQube
     runs-on: ubuntu-latest
-    needs: build
+    needs:
+    - build-test
     steps:
       - uses: actions/checkout@v4
         with:
@@ -95,7 +96,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
     - sonar-analysis
-    - build-test
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
