--- a/.develop.env
+++ b/.develop.env
@@ -8,7 +8,7 @@ MONGO_INITDB_ROOT_USERNAME=mcmm
 MONGO_INITDB_ROOT_PASSWORD=bluemonpie@AR2
 
 # Spring variables - ms-produto
-HOST_SQL=db-sql
+HOST_SQL=localhost
 DATABASE_SQL=food
 SQL_USER=crmm
 SQL_PASSWORD=redmondpie@BR1
